Fix horizontal scroll + add useHorizontalScroll hook

--- a/styles/base/layout.scss
+++ b/styles/base/layout.scss
@@ -1,3 +1,3 @@
 .demo {
-  padding-top: 10rem;
+  background-color: lightgrey;
 }
