--- a/styles/pages/photos.scss
+++ b/styles/pages/photos.scss
@@ -1,6 +1,83 @@
-.photo-list__outer-container {
+// =========== Parallax images ============
+
+.demo-2__seasons {
+  height: 86rem;
+  position: relative;
+  width: 100vw;
+
+  &:after {
+    background: $color-white;
+    border-radius: 0 0 1rem 1rem;
+    content: "";
+    height: calc(1rem + 1px);
+    margin-top: -1px;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    z-index: 1;
+  }
+}
+
+.demo-2__seasons__media {
+  border-radius: 1rem;
   overflow: hidden;
-  min-height: 900vh;
+  position: absolute;
+
+  &:nth-child(1) {
+    border-radius: 1rem 0 0 1rem;
+    height: 28.2rem;
+    right: 0;
+    top: 18rem;
+    width: 41rem;
+  }
+
+  &:nth-child(2) {
+    height: 27.5rem;
+    right: 25.5rem;
+    top: 22.8rem;
+    width: 21.7rem;
+  }
+
+  &:nth-child(3) {
+    height: 32.8rem;
+    left: 15rem;
+    top: 26.8rem;
+    width: 25.7rem;
+    z-index: 1;
+  }
+
+  &:nth-child(4) {
+    height: 26rem;
+    left: 6rem;
+    top: 40.3rem;
+    width: 46.2rem;
+  }
+}
+
+.demo-2__seasons__media__box {
+  @extend %cover;
+
+  border-radius: 1rem;
+}
+
+.demo-2__seasons__media__image {
+  @extend %cover;
+
+  object-fit: cover;
+}
+
+// =========== Horizontal scroll ============
+
+.photo-list__outer-container {
+  position: relative;
+  overflow: hidden;
+  height: 1200vw;
+}
+
+.rectangle {
+  width: 100vw;
+  height: 90vh;
+  background-color: pink;
 }
 
 .photo-list__container {
@@ -13,7 +90,7 @@
 
 .photo-list__img-container {
   position: relative;
-  min-width: 100vw;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
   // top: 0;
